# qt_homeworks

./: .gitignore  README.md
2_homework/Work1/: CMakeLists.txt  main.cpp
3_homework/QtDesigner/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
4_homework/QtWidgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
5_homework/Sequndomer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
8_homework/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
9_homework/: mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
